# Remixer

./: .env  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: docker.yml  overfit.yml
constants/: __init__.py
core/: __init__.py  utils.py
core/data/: __init__.py  chord.py  codec.py  codes.py  data_module.py  remixer.py  remixer_dataset.py  util.py  utils.py
core/evaluation/: evaluate_pica.py
core/models/: VAE.py  __init__.py
core/tests/: test_callback_utils.py  test_data.py
data/: data_preparation.ipynb
deploy/: aws_lambda.py  deploy.ipynb  setup.ipynb
deploy/api_serverless/: __init__.py  api.py
frontend/: README.md  app.py  deploy.ipynb
frontend/tests/: test_app.py
kubeflow/: __init__.py  data_preparation.py  data_preparation_pipeline.yaml  pipeline.ipynb  train.py
load_test/: locust.ipynb  locust_http_user.py
requirements/: dev.in  dev.txt  inference.in  inference.txt  prod.in  prod.txt  train.in  train.txt
tasks/: unit_test.sh
training/: __init__.py  stage_model.py  test_model.py  ticket.py  train.ipynb  train.py  train_beatles_chord_gen.py  train_remixer.py  utils.py
training/sweep/: main-sweep.yaml  simple-overfit-sweep.yaml  sweep.sh
training/tests/: test_run_experiment.sh
